# cbf

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/: brainfuck.hpp  code_block.hpp  memory.hpp  parser.hpp  runner.hpp  windows_compatibility.hpp
include/compiler/: aarch64.hpp  base.hpp
src/: code_block.cpp  main.cpp  parser.cpp  runner.cpp
src/compiler/: aarch64.cpp
tests/: error_loop_not_closed.bf  error_loop_not_opened.bf  in_plus_1_print_x2.bf  sample.bf  sample_with_loop.bf  test_blackbox.py
tests/blackbox/: A_move_print.bf  print_A_from_memory_2.bf  print_A_loop.bf  rot13.bf  rot13.expected
